--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1,6 +1,6 @@
 {
   "website":{
-    "title": "Bin's homepage"
+    "title": "Nick's homepage"
   },
   "nav":{
     "home": "Home",
@@ -13,7 +13,7 @@
   },
   "about_me":{
     "about_me": "About Me",
-    "des": "I am a PhD student in Computer Science and Technology at Shandong University under the supervision of Dr. Fan Zhong and Prof. Xueying Qin. My research interests are mainly in 3D computer vision for augmented reality, including 3D object tracking and 6DoF pose estimation. I am also interested in Robotics and Deep Learning. I enjoy simple and ordinary things, so I am recording my life by photographs. Running is my favorite sport, and I started running at 2015."
+    "des": "I am an electrical and computer science engineer working in the Visual Computing Lab of the Information Technologies Institute at the Centre of Research and Technology Hellas. My research interests are mainly in 3D computer vision and graphics for augmented and virtual reality, including 3D human reconstruction in tele-immersive / holoportation settings. I am also indulging myself into Deep Learning."
   },
   "skills":{
     "my_skills": "Skills"
@@ -23,15 +23,15 @@
   },
   "career":{
     "my_career": "Education",
-    "sdu_a": "School of Computer Science and Technology, Shandong University",
-    "sdu_a_desc": "PhD candidate(Joint Master-Doctor Program) in Comptuer Science and Technology",
-	"sdu_a_advisor": "Advised by Prof. Xueying Qin",
-	"sdu_a_date": "Sep. 2012 - Now",
-    "sdu_a_job": "PhD candidate",
-    "sdu_b": "Softeware College, Shandong University",
-    "sdu_b_desc": "Bachelor degree in Software Engineering",
-    "sdu_b_date": "Sep. 2008 - Jun. 2012",
-    "sdu_b_job": "Undergraduate"
+    #"sdu_a": "Visual Computing Lab, Information Technologies Institute, Centre for Research and Technology Hellas",
+    #"sdu_a_desc": "Computer Vision and Graphics Engineer",
+	#"sdu_a_advisor": "Working on Petros Daras' lab",
+	#"sdu_a_date": "Oct. 2013 - Now",
+    #"sdu_a_job": "Research Assistant",
+    #"sdu_b": "Electrical Engineering Faculty, Aristotle University Thessaloniki",
+    #"sdu_b_desc": "Bachelor degree in Electrical and Computer Science Engineering",
+    #"sdu_b_date": "Sep. 2002 - Jul. 2012",
+    #"sdu_b_job": "Undergraduate"
   },
   "blog":{
     "my_blog": "My Blog"
