--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -14,7 +14,7 @@
   },
   "about_me":{
     "about_me": "About Me",
-    "des": "I am an electrical and computer science engineer working in the Visual Computing Lab of the Information Technologies Institute at the Centre of Research and Technology Hellas. My research interests are mainly in 3D computer vision and graphics for augmented and virtual reality, including 3D human reconstruction in tele-immersive / holoportation settings. I am also indulging myself into Deep Learning."
+    "des": "I am an electrical and computer science engineer working in the Visual Computing Lab of the Information Technologies Institute at the Centre of Research and Technology Hellas. My research interests are mainly in 3D computer vision and graphics for augmented and virtual reality, including 3D human reconstruction in tele-immersive / holoportation settings. Seeing the great potential of modern artificial intelligence, i am also indulging myself into machine (deep) learning techniques."
   },
   "skills":{
     "my_skills": "Skills"
