--- a/static/assets/bib/journals.bib
+++ b/static/assets/bib/journals.bib
@@ -8,3 +8,24 @@
   year={2018},
   publisher={IEEE}
 }
+
+@article{alexiadis2018fast,
+  title={Fast deformable model-based human performance capture and FVV using consumer-grade RGB-D sensors},
+  author={Alexiadis, Dimitrios S and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  journal={Pattern Recognition},
+  volume={79},
+  pages={260--278},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{alexiadis2017integrated,
+  title={An integrated platform for live 3d human reconstruction and motion capturing},
+  author={Alexiadis, Dimitrios S and Chatzitofis, Anargyros and Zioulis, Nikolaos and Zoidi, Olga and Louizis, Georgios and Zarpalas, Dimitrios and Daras, Petros},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  volume={27},
+  number={4},
+  pages={798--813},
+  year={2017},
+  publisher={IEEE}
+}
