--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -1,14 +1,14 @@
 @inproceedings{doumanoglou2018bmsb
-  title={A System Architecture for Live Immersive 3D-Media Transcoding over 5G Networks}
-  author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Griffin, David and Serrano, Javier, and Khoa Phan, Truang and Zarpalas, Dimitrios and Jimenez, David and Alvarez, Federic and Rio, Miguel and Daras, Petros}
+  title={A System Architecture for Live Immersive 3D-Media Transcoding over 5G Networks},
+  author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Griffin, David and Serrano, Javier, and Khoa Phan, Truang and Zarpalas, Dimitrios and Jimenez, David and Alvarez, Federic and Rio, Miguel and Daras, Petros},
   booktitle={Workshop on Media delivery innovations using flexible network models in 5G, IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB18)},
   year={2018},
   organization={IEEE}
 }
 
 @inproceedings{doumanoglou2018qomex
-  title={Subjective quality assessment of textured human full-body 3D-reconstructions}
-  author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Christakis, Emmanouil and Zarpalas, Dimitrios and Daras, Petros}
+  title={Subjective quality assessment of textured human full-body 3D-reconstructions},
+  author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Christakis, Emmanouil and Zarpalas, Dimitrios and Daras, Petros},
   booktitle={International Conference on Quality of Multimedia Experience (QoMEX 2018)},
   year={2018},
   organization={IEEE}
@@ -16,7 +16,7 @@
 
 @article{papachristoumarkerless,
   title={Markerless Structure-based Multi-sensor Calibration for Free Viewpoint Video Capture},
-  author={Papachristou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros}
+  author={Papachristou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
   booktitle={WSCG},  
   year={2018}
 }
