--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -1,4 +1,4 @@
-@inproceedings{doumanoglou2018bmsb
+@inproceedings{doumanoglou2018bmsb,
   title={A System Architecture for Live Immersive 3D-Media Transcoding over 5G Networks},
   author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Griffin, David and Serrano, Javier, and Khoa Phan, Truang and Zarpalas, Dimitrios and Jimenez, David and Alvarez, Federic and Rio, Miguel and Daras, Petros},
   booktitle={Workshop on Media delivery innovations using flexible network models in 5G, IEEE International Symposium on Broadband Multimedia Systems and Broadcasting (BMSB18)},
@@ -6,7 +6,7 @@
   organization={IEEE}
 }
 
-@inproceedings{doumanoglou2018qomex
+@inproceedings{doumanoglou2018qomex,
   title={Subjective quality assessment of textured human full-body 3D-reconstructions},
   author={Doumanoglou, Alexandros and Zioulis, Nikolaos and Christakis, Emmanouil and Zarpalas, Dimitrios and Daras, Petros},
   booktitle={International Conference on Quality of Multimedia Experience (QoMEX 2018)},
