--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -17,7 +17,7 @@
 @article{papachristoumarkerless,
   title={Markerless Structure-based Multi-sensor Calibration for Free Viewpoint Video Capture},
   author={Papachristou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
-  booktitle={WSCG},  
+  booktitle={International Conference on Computer Graphics, Visualization and Computer Vision (WSCG)},  
   year={2018}
 }
 
