--- a/static/assets/bib/other.bib
+++ b/static/assets/bib/other.bib
@@ -1,6 +1,7 @@
 @article{apostolakisbeyond,
   title={Beyond Online Multiplayer: Sharing and augmenting Tele-Immersive 3D game experiences with multiple geographically distributed users.},
-  author={Apostolakis, Konstantinos C and Zioulis, Nikolaos and Doumanoglou, Alexandros and Alexiadis, Dimitrios S}
+  author={Apostolakis, Konstantinos C and Zioulis, Nikolaos and Doumanoglou, Alexandros and Alexiadis, Dimitrios S},
+  year={2017}
 }
 
 @incollection{tisserand2017preservation,
