--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -19,8 +19,30 @@
   publisher={Springer},
   abstract={We present a baseline for 360 dense depth estimation from a single spherical panorama. We circumvent the unavailability of coupled 360 color and depth image datasets by rendering a high quality 360 dataset from existing 3D datasets. We then train a CNN designed specifically for 360 content in a supervised manner, in order to predict a 360 depth map from a single omnidirectional image in equirectangular format. Quantitative and qualitative results show the need for training directly in 360 instead of relying on traditional 2D CNNs},
   url_Pdf={http://vcl.iti.gr/vclNew/wp-content/uploads/2018/08/360D_ECCV2018_Workshop.pdf},
+  url_Website={http://vcl.iti.gr/360-dataset/}
+}
+
+@inproceedings{karakottas2018augmented,
+  title={Augmented VR},
+  author={Karakottas, Antonis and Papachristou, Alexandros and Doumanoqlou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2018 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)},
+  pages={1--1},
+  year={2018},
+  organization={IEEE},
+  url_Video={https://www.youtube.com/watch?v=7O_TrhtmP5Q}
+}
+
+@inproceedings{sterzentsenko2018low,
+  title={A low-cost, flexible and portable volumetric capturing system},
+  author={Sterzentsenko, Vladimiros and Karakottas, Antonis and Papachristou, Alexandros and Zioulis, Nikolaos and Doumanoglou, Alexandros and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2018 14th International Conference on Signal-Image Technology \& Internet-Based Systems (SITIS)},
+  pages={200--207},
+  year={2018},
+  organization={IEEE},
+  abstract={Multi-view capture systems are complex systems to engineer. They require technical knowledge to install and intricate processes to setup related mainly to the sensors’ spatial alignment (i.e. external calibration). However, with the ongoing developments in new production methods, we are now at a position where the production of high quality realistic 3D assets is possible even with commodity sensors. Nonetheless, the capturing systems developed with these methods are heavily intertwined with the methods themselves, relying on custom solutions and seldom - if not at all - publicly available. In light of this, we design, develop and publicly offer a multi-view capture system based on the latest RGB-D sensor technology. For our system, we develop a portable and easy-to-use external calibration method that greatly reduces the effort and knowledge required, as well as simplify the overall process.},
+  url_Pdf={https://www.iti.gr/iti/files/document/publications/low-cost-flexible.pdf},
   url_Website={http://vcl.iti.gr/360-dataset/},
-  url_Data={http://vcl.iti.gr/360-dataset/},
+  url_Project={https://github.com/VCL3D/VolumetricCapture},
 }
 
 @inproceedings{doumanoglou2018bmsb,
