--- a/static/assets/bib/journals.bib
+++ b/static/assets/bib/journals.bib
@@ -1,3 +1,30 @@
+@article{doumanoglou2019benchmarking,
+  title={Benchmarking Open-Source Static 3D Mesh Codecs for Immersive Media Interactive Live Streaming},
+  author={Doumanoglou, Alexandros and Drakoulis, Petros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  journal={IEEE Journal on Emerging and Selected Topics in Circuits and Systems},
+  volume={9},
+  number={1},
+  pages={190--203},
+  year={2019},
+  publisher={IEEE},
+  abstract={This work provides a systematic understanding of the requirements of live 3D mesh coding, targeting (tele-)immersive media streaming applications. We thoroughly benchmark in rate-distortion and runtime performance terms, four static 3D mesh coding solutions that are openly available. Apart from mesh geometry and connectivity, our analysis includes experiments for compressing vertex normals and attributes, something scarcely found in literature. Additionally, we provide a theoretical model of the tele-immersion pipeline that calculates its expected frame-rate, as well as lower and upper bounds for its end-to-end latency. In order to obtain these measures, the theoretical model takes into account the compression performance of the codecs and some indicative network conditions. Based on the results we obtained through our codec benchmarking, we used our theoretical model to calculate and provide concrete measures for these tele-immersion pipeline’s metrics and discuss on the optimal codec choice depending on the network setup. This offers deep insight into the available solutions and paves the way for future research},
+  url_Pdf={https://www.iti.gr/iti/files/document/publications/JETCAS.2019.2898768.pdf},
+  doi={10.1109/JETCAS.2019.2898768},
+  url={https://doi.org/10.1109/JETCAS.2019.2898768},
+}
+
+@article{alvarez2019edge,
+  title={An Edge-to-Cloud Virtualized Multimedia Service Platform for 5G Networks},
+  author={Alvarez, Federico and Breitgand, David and Griffin, David and Andriani, Pasquale and Rizou, Stamatia and Zioulis, Nikolaos and Moscatelli, Francesca and Serrano, Javier and Keltsch, Madeleine and Trakadas, Panagiotis and others},
+  journal={IEEE Transactions on Broadcasting},
+  year={2019},
+  publisher={IEEE},
+  abstract={The focus of research into 5G networks to date has been largely on the required advances in network architectures, technologies and infrastructures. Less effort has been put on the applications and services that will make use of and exploit the flexibility of 5G networks built upon the concept of Software Defined Networking (SDN) and Network Function Virtualization (NFV). Media-based applications are amongst the most demanding services, requiring large bandwidths for high audio-visual quality, low-latency for interactivity and sufficient infrastructure resources to deliver the computational power for running the media applications in the networked cloud. This paper presents a novel Service Virtualization Platform (SVP), called 5G-MEDIA SVP, which leverages the principles of NFV and SDN to facilitate the development, deployment and operation of media services on 5G networks. The platform offers an advanced cognitive management environment for the provisioning of network services (NSs) and media-related applications, which directly link their lifecycle management with user experience as well as optimization of infrastructure resource utilization. Another innovation of 5G-MEDIA SVP is the integration of serverless computing with media intensive applications in 5G networks, increasing cost effectiveness of operation and simplifying development and deployment time. The proposed SVP is being validated against three media use cases: immersive Virtual Reality 3D gaming application, remote production of broadcast content incorporating user generated contents, and dynamically adaptive Content Distribution Networks (CDNs) for the intelligent distribution of Ultra-High Definition (UHD) content. The preliminary results of the 5GMEDIA SVP platform evaluation are compared against current practice and show that the proposed platform provides enhanced functionality for the operators and infrastructure owners, while ensuring better NS performance to service providers and end users. },
+  url_Pdf={https://www.iti.gr/iti/files/document/publications/5G_Networks_final.pdf},
+  doi={10.1109/TBC.2019.2901400},
+  url={https://doi.org/10.1109/TBC.2019.2901400},
+}
+
 @article{doumanoglou2018quality,
   title={Quality of Experience for 3-D Immersive Media Streaming},
   author={Doumanoglou, Alexandros and Griffin, David and Serrano, Javier and Zioulis, Nikolaos and Phan, Truong Khoa and Jim{\'e}nez, David and Zarpalas, Dimitrios and Alvarez, Federico and Rio, Miguel and Daras, Petros},
