--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -1,3 +1,32 @@
+@inproceedings{sterzentsenko2019denoising,
+  author       = "Vladimiros Sterzentsenko and Leonidas Saroglou and Anargyros Chatzitofis and Spyridon Thermos and Nikolaos Zioulis and Alexandros Doumanoglou and Dimitrios Zarpalas and Petros Daras",
+  title        = "Self-Supervised Deep Depth Denoising",
+  booktitle    = "ICCV",
+  year         = "2019",
+  url_Pdf={https://arxiv.org/pdf/1909.01193.pdf},
+  url_Website={https://vcl3d.github.io/DeepDepthDenoising/},
+}
+
+@inproceedings{zioulis2019spherical,
+  author       = "Zioulis, Nikolaos and Karakottas, Antonis and Zarpalas, Dimitris and Alvarez, Federic and Daras, Petros",
+  title        = "Spherical View Synthesis for Self-Supervised $360^o$ Depth Estimation",
+  booktitle    = "International Conference on 3D Vision (3DV)",
+  month        = "September",
+  year         = "2019",
+  url_Website={https://vcl3d.github.io/SphericalViewSynthesis/},
+  url_Data={https://vcl3d.github.io/3D60/},
+}
+
+@inproceedings{karakottas2019360surface,
+  author      = "Karakottas, Antonis and Zioulis, Nikolaos and Samaras, Stamatis and Ataloglou, Dimitrios and Gkitsas, Vasileios and Zarpalas, Dimitrios and Daras, Petros",
+  title       = "360 Surface Regression with a Hyper-Sphere Loss",
+  booktitle   = "International Conference on 3D Vision",
+  month       = "September",
+  year        = "2019",
+  url_Website={https://vcl3d.github.io/HyperSphereSurfaceRegression/},
+  url_Data={https://vcl3d.github.io/3D60/},
+}
+
 @inproceedings{omnidepth2018eccv,
   title={OmniDepth: Dense Depth Estimation for Indoors Spherical Panoramas.},
   author={Zioulis, Nikolaos and Karakottas, Antonis and Zarpalas, Dimitrios and Daras, Petros},
@@ -8,7 +37,7 @@
   url_Pdf={https://arxiv.org/pdf/1807.09620.pdf},
   url_Supplementary={http://vcl.iti.gr/vclNew/wp-content/uploads/2018/07/OmniDepth_paper_supp.pdf},
   url_Website={http://vcl.iti.gr/360-dataset/},
-  url_Data={http://vcl.iti.gr/360-dataset/},
+  url_Data={https://vcl3d.github.io/3D60/},
 }
 
 @inproceedings{360D2018eccvw,
@@ -19,7 +48,7 @@
   publisher={Springer},
   abstract={We present a baseline for 360 dense depth estimation from a single spherical panorama. We circumvent the unavailability of coupled 360 color and depth image datasets by rendering a high quality 360 dataset from existing 3D datasets. We then train a CNN designed specifically for 360 content in a supervised manner, in order to predict a 360 depth map from a single omnidirectional image in equirectangular format. Quantitative and qualitative results show the need for training directly in 360 instead of relying on traditional 2D CNNs},
   url_Pdf={http://vcl.iti.gr/vclNew/wp-content/uploads/2018/08/360D_ECCV2018_Workshop.pdf},
-  url_Website={http://vcl.iti.gr/360-dataset/}
+  url_Website={https://vcl3d.github.io/3D60/}
 }
 
 @inproceedings{karakottas2018augmented,
